first-head-done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <title>Healthy Food</title>
 </head>
+
 <body>
-    
+    <section class="flex-head">
+        <div class="container flex-head">
+            <div class="head-txt">
+                <h1><span>Skip</span> The Diet,
+                    Just Eat Healthy
+                    With Food Network</h1>
+                <h4>Imagine you don't need a diet because we provide
+                    healthy and delicious food for you!</h4>
+                <a target="_blank" href="https://github.com/nahidhasan01">Order Now</a>
+            </div>
+            <div class="head-img">
+                <img src="photos/Group 8446.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- section-2 starts -->
+    <section class="body-flex">
+        <div class="container body-flex">
+            <div class="body-img">
+                <img src="photos/6667872_preview-removebg-preview.png" alt="">
+            </div>
+            <div class="body-txt">
+
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
