--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
         </div>
     </section>
     <!-- section-2 starts -->
-    <section class="body-flex">
+    <section class="Bg-2">
         <div class="container body-flex">
             <div class="body-img">
                 <img src="photos/6667872_preview-removebg-preview.png" alt="">
             </div>
             <div class="body-txt">
-
+                <h1>About Me</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, repellat officiis quo
+                    ratione eligendi repellendus recusandae quam alias. Corporis ullam vero nam deserunt ad labore unde
+                    sint quia non incidunt!</p>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100075811726681">Contact Me</a>
             </div>
         </div>
     </section>
