--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
             </div>
         </div>
     </section>
+    <!-- section 3 starts -->
+    <section>
+        <div class="header-mid">
+            <div class="container">
+                <h1>My recipies</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In culpa, exercitationem assumenda numquam
+                    voluptas odio placeat quidem recusandae quo iste, ab deleniti optio cupiditate, quam distinctio
+                    tempora nihil veniam impedit!</p>
+            </div>
+        </div>
+    </section>
+    <!-- section 4 starts -->
+    <section>
+        <div class="container">
+            <div class="rcp-1">
+                <img src="photos/Project Cover5.png" alt="">
+                <h1>Vegitable Salad</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas perspiciatis illum ab, obcaecati vitae
+                    exercitationem dolores eius voluptatum sit nam eaque ratione, mollitia temporibus sequi aspernatur
+                    quia est voluptates quibusdam!</p>
+            </div>
+            <div class="rcp-2">
+                <img src="photos/Project Cover5.png" alt="">
+                <h1>Vegitable Salad</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt commodi quia laboriosam qui odio
+                    quisquam soluta aspernatur tempora! Natus officiis vero possimus velit expedita doloribus iste
+                    incidunt nobis, ab optio.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
