--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         </div>
     </section>
     <!-- section 4 starts -->
-    <section>
-        <div class="container">
-            <div class="rcp-1">
+    <section id="bottom">
+        <div class="container flex-box">
+            <div class="rcp-1 bx-sdw">
                 <img src="photos/Project Cover5.png" alt="">
                 <h1>Vegitable Salad</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas perspiciatis illum ab, obcaecati vitae
                     exercitationem dolores eius voluptatum sit nam eaque ratione, mollitia temporibus sequi aspernatur
                     quia est voluptates quibusdam!</p>
             </div>
-            <div class="rcp-2">
+            <div class="rcp-2 bx-sdw-2">
                 <img src="photos/Project Cover5.png" alt="">
                 <h1>Vegitable Salad</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt commodi quia laboriosam qui odio
