--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
             </div>
         </div>
     </section>
+    <!-- section 5 -->
+    <section class="btm-cont">
+        <div class="container flex-btm bx-shadow">
+            <div class="sub">
+                <h1>500k</h1>
+                <p>Yotube Subscribers</p>
+            </div>
+            <div class="follow">
+                <h1>1M</h1>
+                <p>Instagram Followers</p>
+            </div>.
+            <div class="view">
+                <h1>
+                    <h1>5.2M</h1>
+                    <p>Regedit Members</p>
+                </h1>
+            </div>
+        </div>
+    </section>
+    <!-- section 6 -->
+    <section>
+        <div class="heading-foot">
+            <h3><span>Eat</span> Fresh</h3>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+    </section>
 </body>
 
 </html>
